<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_orders" />
    <item
        android:id="@+id/nav_my_orders"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_my_orders" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
